op_sidecar_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: op-sidecar
  namespace: default
spec:
  serviceAccountName: datadog-agent
  containers:
  - name: op-sidecar
    image: mes24x7/op_sidecar:latest
    imagePullPolicy: Always
    resources:
      limits:
        memory: "200Mi"
      requests:
        memory: "100Mi"
    command: ["sleep"]
    args: ["100000"]
