alb-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gordon-house
  name: gordon-house
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 8000
      protocol: TCP
      name: http
  selector:
    app: gordon-house
