endpoint.yaml
kind: Endpoints
apiVersion: v1
metadata:
 name: nginx
subsets:
 - addresses:
     - host: api.ps.money
   ports:
     - port: 27017
