spec2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: magic-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "your.hostname.com"
